[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/PlaySpace.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/Mana.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/Shield.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/Hand.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/Monster.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/components/Grave.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/zone/duel-master-back.png" type="Texture" id=8]
[ext_resource path="res://src/Coms.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/ARIAL.TTF" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 10 )

[node name="Playspace" type="Control"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )
centered = false

[node name="PlayerID" type="TextEdit" parent="."]
margin_left = 3.0
margin_top = 6.0
margin_right = 127.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 10 )
readonly = true
wrap_enabled = true

[node name="EndTurn" type="Control" parent="."]
margin_left = 144.0
margin_top = 734.0
margin_right = 184.0
margin_bottom = 774.0

[node name="EndTurnButton" type="Button" parent="EndTurn"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.52128, 1.22965 )
custom_fonts/font = SubResource( 9 )
text = "END TURN"

[node name="Exit" type="Control" parent="."]
margin_left = 21.0
margin_top = 988.0
margin_right = 61.0
margin_bottom = 1028.0

[node name="ExitButton" type="Button" parent="Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 2.475, 1.84211 )
text = "EXIT"
clip_text = true

[node name="Shield1" parent="." instance=ExtResource( 4 )]
margin_left = 21.0
margin_top = 630.0
margin_right = 21.0
margin_bottom = 630.0

[node name="Grave1" parent="." instance=ExtResource( 7 )]
margin_left = 1612.0
margin_top = 550.0
margin_right = 1612.0
margin_bottom = 550.0

[node name="Mana1" parent="." instance=ExtResource( 3 )]
margin_left = 315.0
margin_top = 554.0
margin_right = 315.0
margin_bottom = 554.0

[node name="Deck1" parent="." instance=ExtResource( 2 )]
margin_left = 1427.0
margin_top = 550.0
margin_right = 1427.0
margin_bottom = 550.0

[node name="Monster1" parent="." instance=ExtResource( 6 )]
margin_left = 500.0
margin_top = 551.0
margin_right = 500.0
margin_bottom = 551.0

[node name="Hand1" parent="." instance=ExtResource( 5 )]
margin_left = 129.0
margin_top = 820.0
margin_right = 129.0
margin_bottom = 820.0

[node name="Shield2" parent="." instance=ExtResource( 4 )]
margin_left = 1801.0
margin_top = 112.0
margin_right = 1801.0
margin_bottom = 112.0

[node name="Grave2" parent="." instance=ExtResource( 7 )]
margin_left = 308.0
margin_top = 532.0
margin_right = 308.0
margin_bottom = 532.0
rect_rotation = 180.0

[node name="Mana2" parent="." instance=ExtResource( 3 )]
margin_left = 1605.0
margin_top = 530.0
margin_right = 1605.0
margin_bottom = 530.0
rect_rotation = 180.0

[node name="Deck2" parent="." instance=ExtResource( 2 )]
margin_left = 493.0
margin_top = 532.0
margin_right = 493.0
margin_bottom = 532.0
rect_rotation = 180.0

[node name="Monster2" parent="." instance=ExtResource( 6 )]
margin_left = 1420.0
margin_top = 530.0
margin_right = 1420.0
margin_bottom = 530.0
rect_rotation = 180.0

[node name="Hand2" parent="." instance=ExtResource( 5 )]
margin_left = 1791.0
margin_top = 263.0
margin_right = 1791.0
margin_bottom = 263.0
rect_rotation = 180.0

[node name="Viewer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Coms" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="RoomUI" type="Panel" parent="Coms"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ChatDisplay" type="TextEdit" parent="Coms/RoomUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
readonly = true

[node name="ChatInput" type="LineEdit" parent="Coms/RoomUI"]
visible = false
margin_right = 58.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="SetUp" type="Control" parent="Coms"]

[node name="HostButton" type="Button" parent="Coms/SetUp"]
margin_left = 340.0
margin_top = 440.0
margin_right = 640.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 3 )
text = "Host"

[node name="IpEnter" type="LineEdit" parent="Coms/SetUp"]
margin_left = 830.0
margin_top = 440.0
margin_right = 1130.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 7 )
text = "127.0.0.1"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="JoinButton" type="Button" parent="Coms/SetUp"]
margin_left = 1320.0
margin_top = 440.0
margin_right = 1620.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 5 )
text = "Join"

[node name="LeaveButton" type="Button" parent="Coms/SetUp"]
visible = false
margin_left = 21.0
margin_top = 988.0
margin_right = 87.0
margin_bottom = 1028.0
rect_min_size = Vector2( 40, 40 )
custom_fonts/font = SubResource( 8 )
text = "Leave"

[connection signal="gui_input" from="EndTurn/EndTurnButton" to="." method="_on_EndTurnButton_gui_input"]
[connection signal="gui_input" from="Exit/ExitButton" to="." method="_on_ExitButton_gui_input"]
[connection signal="button_up" from="Coms/SetUp/HostButton" to="Coms" method="host_room"]
[connection signal="button_up" from="Coms/SetUp/JoinButton" to="Coms" method="join_room"]
[connection signal="button_up" from="Coms/SetUp/LeaveButton" to="Coms" method="leave_room"]
